# Info0601-Mini-Projet-2

./: .gitignore  CMakeLists.txt  constantes.h  gestionnaires.c  gestionnaires.h  handlers.c  handlers.h  my_math.c  my_math.h  ncurses.c  producteur.c  requete_reponse.h  tools_error.c  tools_error.h
Consommateur/: CMakeLists.txt  constantes.h  handlers.c  handlers.h  main.c  primalite.c  primalite.h  tools.c  tools.h
